  for 'cvsps -s' in this case (frequent bug report)
- added the '-l' option to restrict patchsets based on log descr
  content. (patch from Geoff Soutter).  added man page for it.
- added the --summary-first option suggested by Andi Kleen to
  have the PatchSet summary information for all patchsets at
  the head of the output, when multiple patchsets are given
  to the -s option.
- added the all: target to Makefile.  Patch from Ben Elliston
- use a single centralized cvsps.cache file per root/repository
  this obviates the need to 'cvsps -u' in multiple checked out
  trees of the same repository (patch adopted from Baruch Even)


1.3.3 (why isn't this 1.4 again?)
- added the 'memory reduction' patch from Baruch Even.  This patch
  greatly reduces the memory footprint of CVSps against a large 
  repository by using dynamically allocated buffers, and by using
  a tree to hold "common" strings (to avoid having a thousand copies
  of the string "1.1").  This patch also adds a new option '-t' which
  displays some memory usage statistics at the top.

- added the 00-strip-revision.patch from Steven Tweedie which fixes
  a parsing problem when there are locked files in the repository

- added the 'Tweedie Tweenie' patch from Steven Tweedie (01-stable-tree) 
  which fixes a bug where interspersed commits could cause unstable 
  tree behavior.  This would happen especially when multiple users commit 
  at the same time to different parts of a large tree over a slow link.

- added the --norc option (based on a suggestion by Soren S. Jorvang) 
  to handle cases where people have bad stuff in their .cvsrc which makes 
  cvsps fail.  I could have added the '-f' unconditionally to the command
  line for cvs when run under cvsps, but somehow that seemed dangerous.

1.3.2 (small feature release)
- added the 'multi-patchset' feature to the -s option, provided in its
  entirety by Daiki Ueno <ueno@unixuser.org>

1.3.1 (bugfix release mostly)