@@ -41,7 +41,8 @@ revisions newer than date1.  If two dates specified,
 show revisions between two dates.
 .TP
 .B \-b <branch>
-restrict output to patchsets affecting history of branch
+restrict output to patchsets affecting history of branch.
+If you want to restrict to the main branch, use a branch of 'HEAD'.
 .TP
 .B \-v
 show verbose parsing messages
